# UBC-Newcomers

./: CLAUDE.md
backend/: .env.example  Dockerfile  buildspec.yml  main.py  pyproject.toml
backend/app/: config.py  dependencies.py  seed.py
backend/app/models/: __init__.py  connection.py  event.py  landmark.py  meetup.py  user.py
backend/app/routers/: auth.py  connections.py  events.py  landmarks.py  matching.py  meetups.py  users.py
backend/app/schemas/: auth.py  connection.py  event.py  landmark.py  matching.py  meetup.py  user.py
backend/app/services/: bedrock.py  cognito.py  firebase_auth.py  s3.py  scraper.py  sns.py
backend/app/utils/: geo.py
backend/tests/: conftest.py  test_auth.py  test_connections.py  test_events.py  test_landmarks.py  test_matching.py  test_meetups.py  test_users.py
frontend/: .env.example  DESIGN.md  app.config.ts  package-lock.json  package.json
frontend/app/: +not-found.tsx  _layout.tsx  event-detail.tsx  user-detail.tsx  zone-detail.tsx
frontend/app/(auth)/: login.tsx  onboarding.tsx  verify.tsx  welcome.tsx
frontend/app/(tabs)/: _layout.tsx  connections.tsx  nearby.tsx  profile.tsx
frontend/components/map/: ExploreMap.native.tsx  ExploreMap.tsx
frontend/components/ui/: Button.tsx  Card.tsx  MatchBadge.tsx  ProgressRing.tsx
frontend/constants/: Colors.ts
frontend/services/: api.ts  firebase.ts
frontend/stores/: useAuthStore.ts  useNearbyStore.ts
