[project]
name = "ubc-newcomers-backend"
version = "0.1.0"
description = "Backend API for UBC Newcomers community app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.18",
    "pyjwt[crypto]>=2.10.0",
    "awscrt>=0.32.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
